--- a/assessment.html
+++ b/assessment.html
@@ -1,1 +1,160 @@
-<h1>Test</hi>
+<!DOCTYPE html>
+<!Doctype css>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Sanda's Homework</title>
+    <style>
+    table, th, td {
+      border: 1px solid black;
+      border-collapse: collapse;
+    }
+    </style>
+  </head>
+  <body>
+    <h1>TEXT</h1>
+    <div id="introduction">
+      <p><strong>Lorem</strong> ipsum dolor sit amet, consectetur adipiscing elit. Nulla id ante pharetra,
+        dictum enim eget, tincidunt nisi. Quisque euismod porttitor semper. Duis tortor enim, pharetra sed dui ut,
+        dapibus sagittis sem. Integer diam elit, auctor ac consequat in, convallis vel ante. Aenean sed est non metus
+        rutrum pharetra. Suspendisse potenti. Nam risus metus, consequat ac consequat sit amet, cursus et orci. Nulla
+        pulvinar erat sit amet nisl sodales vulputate. Ut vel ante a quam imperdiet tempor.</p>
+
+    </div>
+    <div>
+
+<blockquote><p><em><strong>Integer</strong> ipsum dolor sit amet, consectetur adipiscing elit. Nulla id ante pharetra,
+      dictum enim eget, tincidunt nisi. Quisque euismod porttitor semper. Duis tortor enim, pharetra sed dui ut,
+      dapibus sagittis sem. Integer diam elit, auctor ac consequat in, convallis vel ante. Aenean sed est non metus
+      rutrum pharetra. Suspendisse potenti. Nam risus metus, consequat ac consequat sit amet, cursus et orci. Nulla
+      pulvinar erat sit amet nisl sodales vulputate. Ut vel ante a quam imperdiet tempor.</em>
+  </p></blockquote>
+
+  <p><strong>Lorem</strong> ipsum dolor sit amet, consectetur adipiscing elit. Nulla id ante pharetra,
+    dictum enim eget, tincidunt nisi. Quisque euismod porttitor semper. Duis tortor enim, pharetra sed dui ut,
+    dapibus sagittis sem. Integer diam elit, auctor ac consequat in, convallis vel ante. Aenean sed est non metus
+    rutrum pharetra. Suspendisse potenti. Nam risus metus, consequat ac consequat sit amet, cursus et orci. Nulla
+    pulvinar erat sit amet nisl sodales vulputate. Ut vel ante a quam imperdiet tempor.</p>
+
+  </div>
+  <div>
+
+
+</div>
+<h1>TABLE<h1>
+
+  <!-- remove the empty header below and the entire table is in bold? -->
+    <h3></h3>
+
+  <table style="width:75%">
+    <tr>
+      <th colspan="6">Scores By Quarter</th>
+    </tr>
+    <tr>
+      <th colspan="1"rowspan="2">Team Name</th>
+      <th colspan="2">First Half</th>
+      <th colspan="2">Second Half</th>
+      <th rowspan="2">Final</th>
+    </tr>
+    <tr>
+
+      <td>Q1</td>
+      <td>Q2</td>
+      <td>Q3</td>
+      <td>Q4</td>
+    </tr>
+    <tr>
+      <td>Denver</td>
+      <td>7</td>
+      <td>3</td>
+      <td>0</td>
+      <td>7</td>
+      <td>17</td>
+    </tr>
+    <tr>
+      <td>Chicago</td>
+      <td>0</td>
+      <td>6</td>
+      <td>3</td>
+      <td>5</td>
+      <td>15</td>
+    </tr>
+    <tr>
+      <th>Total</th>
+      <th>7</th>
+      <th>9</th>
+      <th>3</th>
+      <th>13</th>
+      <th>32</th>
+    </tr>
+  </table>
+
+  <h1>LIST</h1>
+
+  <ul><img src="https://static.www.nfl.com/t_q-best/league/api/clubs/logos/NE" alt="" width="50" height="50">
+    <li><a href="https://www.patriots.com/"> New England Patriots</a></li>
+    <ul>
+      <li>Coach: Bill Belichick</li>
+      <li>QB</li>
+      <ol>
+        <li>Mac Jones</li>
+        <li>BaileyZappe</li>
+      </ol>
+    </ul>
+  </ul>
+
+  <ul><img src="https://static.www.nfl.com/t_q-best/league/api/clubs/logos/DEN" alt="" width="50" height="50">
+    <li><a href="https://www.denverbroncos.com/"> Denver Broncos</a></li>
+    <ul>
+      <li>Coach: Nathaniel Hacket</li>
+      <li>QB</li>
+      <ol>
+        <li>Russel Wilson</li>
+        <li>Brett Rypien</li>
+      </ol>
+    </ul>
+  </ul>
+
+<h1>FORM</h1>
+
+<form class="" action="index.html" method="post">
+<label for="firstName">First:</label>
+  <input type="text" name="firstName" value="" placeholder="First Name">
+  <label for="lastName">Last:</label>
+    <input type="text" name="lastName" value="" placeholder="Last Name">
+    <br><br>
+<label for="favSport">Favorite Sport:</label>
+<select class="" name="favSport">
+  <option value="soccer">Soccer</option>
+  <option value="football">Football</option>
+  <option value="tennis">Tennis</option>
+  <option value="basketball">Basketball</option>
+  <option value="baseball">Baseball</option>
+  <option value="hockey">Hockey</option>
+</select>
+<br>
+<label for="iHave">I have:</label>
+<input type="checkbox" name="Attended" value="Attended">
+<label for="Attended">Attended</label>
+<input type="checkbox" name="Played" value="Played">
+<label for="Played">Played</label>
+<input type="checkbox" name="Coached" value="Coached">
+<label for="Coached">Coached</label>
+<input type="checkbox" name="Bet On" value="Bet On">
+<label for="Bet On">Bet On</label>
+
+<br>
+<label for="forThisSport">For this sport I prefer the:</label>
+<input type="radio" name="level" value="Amateur">
+<label for="Ameteur">Ameteur</label>
+<input type="radio" name="level" value="College">
+<label for="College">College</label>
+<input type="radio" name="level" value="Professional">
+<label for="Professional">Professional</label>
+<br>
+<button type="button" name="submit">Submit Query</button>
+
+</form>
+
+  </body>
+  </html>
